# rewrite

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .terraform-docs.yaml  CHANGELOG.md  DEBUGGING.md  Dockerfile  README.md  REWRITE_REVIEW.md  alembic.ini  compose.yaml  docker-compose.yaml  openapi.json  pyproject.toml  release-please-config.json  sdk-config.yml  sonar-project.properties
.github-legacy/: CODEOWNERS  dependabot.yaml  pull_request_template.md
.github-legacy/workflows/: build-push-images-ecr.yaml  ci-checks.yaml  ci.yaml  client-lib-branch-cleanup.yaml  client-lib-creation.yaml  delete-images-ecr-int.yaml  gen-openapi-spec-check-breaking-changes.yaml  on-demand-sonarqube.yaml  publish-sdk.yaml  release-please.yaml  request-reviews.yaml  semantic-pr.yaml  set-assignee.yaml
.github/workflows/: ci.yaml
.opencode/skills/python-api-modernization-review/: SKILL.md
applications/clusters-4wm/: Chart.yaml  values-int.yaml  values-partner-int.yaml  values-partner-prod.yaml  values-partner.yaml  values-prod.yaml  values-test.yaml  values.yaml
applications/clusters-4wm/templates/: _helpers.tpl  certificates.yaml  database.yaml  deployment.yaml  es-credentials.yaml  es-db-credentials.yaml  es-wildcard-clusters-4wm-tls.yaml  hpa.yaml  ingress.yaml  job.yaml  service.yaml  servicemonitor.yaml
applications/clusters-metadata-api/: Chart.yaml  values-int.yaml  values-partner-int.yaml  values-partner-prod.yaml  values-partner.yaml  values-prod.yaml  values-test.yaml  values.yaml
applications/clusters-metadata-api/templates/: _helpers.tpl  certificates.yaml  database.yaml  deployment.yaml  es-credentials.yaml  es-db-credentials.yaml  es-wildcard-clusters-metadata-api-tls.yaml  hpa.yaml  ingress.yaml  job.yaml  service.yaml  servicemonitor.yaml
docs/: migration-guide.html
migrations/: env.py
migrations/triggers/: triggers.py
migrations/versions/: 2022_09_04-305ae638786e_init.py  2022_09_05-16b351bb42a8_add_constraint_to_repository_field.py  2022_09_06-4bf4403793c7_add_operations_fields.py  2023_01_11-a90bf054665a_add_owner_group_field.py  2023_03_03-a29700d9a5ab_add_cmdb_appd_id_field.py  2023_04_06-92e3864c4871_add_network_cidr_field.py  2023_04_14-a535e0608665_add_vpc_endpoint_service_name_field.py  2023_05_18-ea37d341baed_add_cluster_feature_table.py  2023_07_04-32027a8dbaec_add_cmdb_app_id_field_to_clusters.py  2023_09_04-6915ba4b822f_add_cluster_status_field.py  2023_09_05-e3db0ecbe039_create_releases_tables.py  2023_09_06-5bad183d950f_add_status_field.py  2023_09_22-3fe9f3ae2fb6_create_clientnamespace_table.py  2023_10_20-5d5e9ad536ee_add_account_name_field.py  2023_11_16-dddf9fbea89e_create_table_cluster_lock.py  2024_01-18-aae7fbcb9e15_add_cluster_oidc_issuer_url.py  2024_02_23-9080eef9ab03_add_sku_tier_field.py  2024_03_26-492c294ca425_migrate_missing_fields.py  2024_07_08-f1e574399590_add_multi_tenant_field.py  2024_07_10-bfb992ebe994_add_aws_remote_account_ids_field.py  2024_09_17-7f4ae9be9f6a_create_user_features_table.py  2024_09_26-4a27ed2c0828_add_additional_node_pool.py  2024_10_10-eb900294dc4b_cleanup_jenkins_references.py  2024_10_17-3c41d177d800_add_kube_downscaler_period_parameters.py  2024_11_26-d2f5b74e6a8f_add_feature_constraints.py  2025_01_31-b6d9e122465f_add_gateway_api_enabled_column.py  2025_03_05-0f3a5437c506_add_domain_allowlist_column.py  2025_05_06-c7789ff947e0_add_teams_webhooks.py  2025_05_15-bde7104a1c48_add_client_otlp_endpoint_info.py  2025_06_04-37f752684c65_adding_created_at_and_updated_at_.py  2025_06_04-db119f72f5d3_adding_trigger_function_to_use_on_.py  2025_09_01-7df528a88220_add_azure_managed_identity_object_ids.py  2025_09_10-90e10d167091_add_reserved_namespaces_to_release_table.py  2025_09_23-e4979347996f_add_namespaced_features_support.py  2025_11_21-1302b37e4b60_add_storage_classes_table.py  2026_02_04-e4612c8a30d1_add_new_consumed_by_field_to_.py  2026_03_18-5ba2302a5f7d_add_config_field_to_client_otlp_table.py  2026_03_24-f3d01f08893a_add_vpc_endpoint_service_ingress_name.py  2026_04_02-fc3836a557f6_adjusting_db_structure_against_orm_.py  2026_04_16-54b46bacd8ec_add_uptime_period_column_to_cluster_.py  (+8 more)
postman/: Cluster DB.postman_collection.json
scripts/: generate_openapi_spec.py  generate_sdk.sh
src/: README.md
src/api/m4w/: auth.py  main.py
src/api/partner/: auth.py  main.py
src/api/shared/: config.py  database.py  enums.py  exceptions.py  logger.py  metrics_setup.py
src/app/: deps.py  main.py  partner.py
src/app/api/: health.py  problem.py
src/app/core/: config.py  constants.py  db.py  logging.py  metrics.py  security.py  types.py
src/app/models/: __init__.py  base.py  cluster.py  feature.py  lock.py  namespace.py  node_pool.py  operation.py  otlp_endpoint.py  release.py  storage_class.py  user_feature.py  webhook.py
src/app/repositories/: cluster.py  feature.py  lock.py  operation.py  release.py
src/app/schemas/: clusters.py  enums.py  features.py  locks.py  namespaces.py  node_pools.py  operations.py  otlp_endpoints.py  releases.py  storage_classes.py  user_features.py  webhooks.py
src/app/services/: errors.py  feature.py  lock.py  operation.py  release.py
tests/: conftest.py  test_migrations.py  utils.py
tests/api/: test_cluster_schema.py  test_cluster_status.py  test_clusters.py  test_health.py  test_locks.py  test_operations.py  test_partner.py  test_releases.py
tests/contract/clusters/: test_errors.py  test_requests.py  test_responses.py
tests/contract/partner/: test_partner_errors.py  test_partner_responses.py
tests/contract/releases/: test_release_errors.py  test_release_requests.py  test_release_responses.py
tests/factories/: __init__.py  cluster_factory.py  feature_factory.py  otlp_endpoint_factory.py  release_factory.py  storage_class_factory.py
tests/integration/: test_health.py  test_metrics.py
tests/integration/clusters/: test_add_cluster.py  test_client_otlp_endpoints.py  test_delete_cluster.py  test_get_cluster_by_id.py  (+6 more)
tests/services/: test_mapper.py
utils/: clusters4wm_int_pg_dump.sh  feed_db.sh  get_cluster_info.sh
(+80 files in other folders)
