[project]
name = "clusters-metadata-api"
version = "3.0.0"
description = "Clusters Metadata API — canonical metadata service"
authors = [
    { name = "Team Isetta", email = "teamisettainternal@criticaltechworks.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1.0,<4.0.0",
    "python-json-logger>=2.0.2,<3.0.0",
    "opentelemetry-api>=1.31.0,<2.0.0",
    "opentelemetry-sdk>=1.31.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.52b1,<1.0.0",
    "opentelemetry-exporter-prometheus>=0.52b1,<1.0.0",
]

[dependency-groups]
# Installed into the runtime image so the init-db job can run migrations;
# kept out of the API runtime deps (the serving pods never import alembic).
migrations = [
    "alembic>=1.16.0,<2.0.0",
]
dev = [
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    {include-group = "migrations"},
]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.27.0,<1.0.0",
    "testcontainers[postgres]>=4.0.0,<5.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "faker>=30.0.0,<40.0.0",
    "anyio>=4.0.0,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
src = ["src"]
exclude = [".git", "__pycache__", ".ruff_cache", ".venv", "alembic"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused function arguments
    "T201",   # print statements
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (Depends)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
strict = true
exclude = ["alembic", ".venv"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["opentelemetry.*", "prometheus_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "clusters: Cluster endpoint tests",
    "features: Feature endpoint tests",
    "releases: Release endpoint tests",
    "operations: Operation endpoint tests",
    "locks: Lock endpoint tests",
    "partners: Partner endpoint tests",
]
