[project]
name = "clusters-metadata-api"
version = "3.0.0"
description = "Clusters Metadata API — canonical metadata service"
authors = [
    { name = "Team Isetta", email = "teamisettainternal@criticaltechworks.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1.0",
    "python-json-logger>=2.0.2,<3.0.0", # capped: code uses the 2.x jsonlogger import
    "opentelemetry-api>=1.31.0",
    "opentelemetry-sdk>=1.31.0",
    "opentelemetry-instrumentation-fastapi>=0.52b1",
    "opentelemetry-exporter-prometheus>=0.52b1",
]

[dependency-groups]
# Own group so the migration image installs alembic without the API runtime deps.
migrations = ["alembic>=1.16.0"]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pre-commit>=4.0.0",
    { include-group = "migrations" },
]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "testcontainers[postgres]>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused function arguments
    "T201",   # print statements
]
ignore = ["E501"] # the formatter wraps code to line-length; E501 only flags long strings/URLs

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["opentelemetry.*", "prometheus_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]
